--- a/RHAA/Views/Home/Index.cshtml
+++ b/RHAA/Views/Home/Index.cshtml
@@ -3,29 +3,45 @@
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>@ViewBag.Greeting, today is @ViewBag.CurrentDayOfWeek, the @ViewBag.CurrentDayOfMonth of @ViewBag.CurrentMonth. The time is
+    @ViewBag.CurrentHour:@ViewBag.CurrentMinute. The temperature outside is @ViewBag.CurrentTemp° with @ViewBag.WeatherDescription</h1>
+    <p>
+        <a href="http://asp.net" class="btn btn-danger btn-lg">Turn the lights on &raquo;</a>
+    </p>
+
+
+   
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        
+
+
+        <h2>News:</h2>
+        <asp:ListView ID="ListView1" runat="server">
+            <LayoutTemplate>
+                <ul>
+                    <asp:PlaceHolder ID="itemPlaceholder" runat="server" />
+                </ul>
+            </LayoutTemplate>
+            <ItemTemplate>
+                <p>
+                    <ul>
+                        @foreach (var post in ViewBag.Posts)
+                        {
+                            <li><img src=@post.Thumbnail.OriginalString> <a href=@post.Shortlink>@post.Title</a></li>
+                        }
+                    </ul>
+                </p>
+            </ItemTemplate>
+            
+        </asp:ListView>
+                    <p><a class="btn btn-default" href="http://reddit.com/r/worldnews">More &raquo;</a></p>
+
+
+
+
+
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+   
